# PontoBot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  db.sqlite3  pyproject.toml
src/pontobot/: __init__.py  __main__.py  bot.py
src/pontobot/cogs/: attendance.py  frequencia.py  gerenciamento.py  management.py  setup.py
src/pontobot/database/: manager.py  models.py
src/pontobot/database/migrations/models/: 0_20260628125009_init.py  0_20260719182826_init.py  1_20260719190514_add_language_to_guild.py
src/pontobot/utils/: logger.py
