[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "PontoBot"
dynamic = ["version"]
description = "A discord bot for checking presence"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Vinicius Freittas", email = "vinifreitas6465@gmail.com" }
]
keywords = ["discord bot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "discord.py",
    "tortoise-orm",
    "aerich",
    "tzdata",
    "python-dateutil",
    "typer"
]

[project.scripts]
pontobot = "pontobot.__main__:cli"

[project.urls]
Homepage = "https://github.com/vinifreittas/PontoBot"
Bug-Tracker = "https://github.com/vinifreittas/PontoBot/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

# --- Hatch Configuration ---

[tool.hatch.build.targets.wheel]
packages = ["src/pontobot"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

# --- Third-Party Tools ---

[tool.aerich]
tortoise_orm = "pontobot.database.manager.TORTOISE_ORM"
location = "./src/pontobot/database/migrations"
app = "models"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (syntax modernization)
    "B",   # flake8-bugbear (bug prevention)
    "SIM", # flake8-simplify (code simplification)
    "N",   # naming convention
    "RUF", # ruff specific rules
]

ignore = [
    "E501", # Line too long (Ruff's formatter handles this well anyway)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"